--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Вспоминаем HTML и CSS</title>
+    <title>HTML, CSS, JS</title>
   </head>
   <body>
     <h1>Hello World!</h1>
@@ -11,5 +11,8 @@
     alert( 'Привет, мир!' );
     </script>
     <p>(Привет Мир!)</p>
+    <p>Первый универсальный скрипт из корневой папки приветствует вас!</p>
+    <script src="root_script_1.js"></script>
+    <p>Появление данного текста означает окончание скрипта</p>
   </body>
 </html>
