--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <h1>Hello World!</h1>
-    <p><a href="http://mail.ru">Ссылка на мэйл.ру</a></p>
+    <p><a href="images/i-am-not-ok.jpg">Винс в смятении</a></p>
+    <p><a href="images/i-am-ok.jpg">Винс в порядке</a></p>
+    <p><a href="https://detifm.ru/programs_shows" target="_blank">Ссылка на программы Детского Радио</a></p>
     <script>
     alert( 'Привет, мир!' );
     </script>
