--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Hello World!</h1>
     <p><a href="images/i-am-not-ok.jpg">Винс в смятении</a></p>
-    <p><a href="images/i-am-ok.jpg">Винс в порядке</a></p>
+    <p><a href="images/i-am-ok.jpeg">Винс в порядке</a></p>
     <p><a href="https://detifm.ru/programs_shows" target="_blank">Ссылка на программы Детского Радио</a></p>
     <script>
     alert( 'Привет, мир!' );
