--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     alert( 'Привет, мир!' );
     </script>
     <p>(Привет Мир!)</p>
-    <p>Первый универсальный скрипт из корневой папки приветствует вас!</p>
-    <script src="root_script_1.js"></script>
-    <p>Появление данного текста означает окончание скрипта</p>
+   <!-- нечитаемые теги -->
+   <!--  <p>Первый универсальный скрипт из корневой папки приветствует вас!</p> -->
+   <!--  <script src="root_script_1.js"></script> -->
+   <!--  <p>Появление данного текста означает окончание скрипта</p> -->
   </body>
 </html>
