--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   </head>
   <body>
     <h1>Hello World!</h1>
-    <p><a href="images/i-am-not-ok.jpg">Винс в смятении</a></p>
-    <p><a href="images/i-am-ok.jpeg">Винс в порядке</a></p>
-    <p><a href="https://detifm.ru/programs_shows" target="_blank">Ссылка на программы Детского Радио</a></p>
+    <h2>Полезные ссылки:</h2>
+      <ul>
+      <li><a href="images/i-am-not-ok.jpg">Винс в смятении</a></li>
+      <li><a href="images/i-am-ok.jpeg">Винс в порядке</a></li>
+      <li><a href="https://detifm.ru/programs_shows" target="_blank">Ссылка на программы Детского Радио</a></li>
     <script>
     alert( 'Привет, мир!' );
     </script>
