--- a/index.html
+++ b/index.html
@@ -2,23 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>HTML, CSS, JS</title>
+    <title>HTML, CSS, JS, React</title>
   </head>
   <body>
     <h1>Hello World!</h1>
-    <h2>Полезные ссылки:</h2>
+    <h2>Навигация по "сайту":</h2>
       <ul>
-      <li><a href="images/i-am-not-ok.jpg">Винс в смятении</a></li>
-      <li><a href="images/i-am-ok.jpeg">Винс в порядке</a></li>
-      <hr>
+      <li><a href="images/i-am-ok.jpeg" target="_self">Фотка "Винс в порядке"</a></li>
+      <li><a href="vinsent.html" target="_self">Страничка Винсента</a></li>
+      <li><a href="feedback.html" target="_self">Ссылка на форму обратной связи</a></li>
       <li><a href="https://detifm.ru/programs_shows" target="_blank">Ссылка на программы Детского Радио</a></li>
       </ul>
-    <script>
-    alert( 'Привет, мир!' );
-    </script>
-   <!-- нечитаемые теги -->
-   <!--  <p>Первый универсальный скрипт из корневой папки приветствует вас!</p> -->
-   <!--  <script src="root_script_1.js"></script> -->
-   <!--  <p>Появление данного текста означает окончание скрипта</p> -->
+      <!-- Здесь будет первый скрипт из корневой папки
+      <script src="root_script_1.js"></script>
+      -->
   </body>
 </html>
