--- a/feedback.html
+++ b/feedback.html
@@ -34,8 +34,8 @@
         <input type="checkbox" id="email">Получить ответ по e-mail
         </p>
         <p>
-        <input type="submit" id="send">
-        <input type="reset" id="clear">
+        <input type="submit" id="send" value="Отправить">
+        <input type="reset" id="clear" value="Начать заново">
         </p>
     </form>
   </body>
