--- a/vinsent.html
+++ b/vinsent.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -7,7 +6,7 @@
   <body>
     <h1>Страничка Винса</h1>
     <br><br><br>
-    <img src="images/i-am-not-ok.jpg" alt="кринжовая фотка Винса" width="50%" height="50%">
+    <img src="images/vins-jump.jpg" alt="Винс в прыжке" width="50%" height="50%">
     <!-- Здесь будет выпадающий список: осень, зима, весна, лето и снова зима -->
   </body>
 </html>
