--- a/feedback.html
+++ b/feedback.html
@@ -39,6 +39,6 @@
         </p>
     </form>
     <br><br><br>
-    <img src="images/feedback.gif" alt="Обратная связь" width="50%" height="50%">
+    <img src="images/feedback.GIF" alt="Обратная связь" width="50%" height="50%">
   </body>
 </html>
