--- a/vinsent.html
+++ b/vinsent.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <h1>Страничка Винса</h1>
-    <br><br><br>
-    <img src="images/vins-jump.JPG" alt="Винс в прыжке" width="50%" height="50%">
+    <br>
+    <img src="images/vins-jump.JPG" alt="Винс в прыжке" width="50%">
     <!-- Здесь будет выпадающий список: осень, зима, весна, лето и снова зима -->
   </body>
 </html>
