--- a/feedback.html
+++ b/feedback.html
@@ -38,7 +38,7 @@
         <input type="reset" id="clear" value="Начать заново">
         </p>
     </form>
-    <br><br><br>
-    <img src="images/feedback.GIF" alt="Обратная связь" width="50%" height="50%">
+    <br>
+    <img src="images/feedback.GIF" alt="Обратная связь" width="50%">
   </body>
 </html>
