--- a/index.html
+++ b/index.html
@@ -2,19 +2,51 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>HTML, CSS, JS, React</title>
+    <title>Форма обратной связи</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <h2>Навигация по "сайту":</h2>
-      <ul>
-      <li><a href="images/i-am-ok.jpeg" target="_self">Фотка "Винс в порядке"</a></li>
-      <li><a href="vinsent.html" target="_self">Страничка Винсента</a></li>
-      <li><a href="feedback.html" target="_self">Ссылка на форму обратной связи</a></li>
-      <li><a href="https://detifm.ru/programs_shows" target="_blank">Ссылка на программы Детского Радио</a></li>
-      </ul>
-      <!-- Здесь будет первый скрипт из корневой папки
-      <script src="root_script_1.js"></script>
-      -->
+    <script>
+    alert( 'Вы на странице формы обратной связи' );
+    </script>
+    <h1>Связаться с нами!</h1>
+    <table>
+      <tr>
+        <th>
+          <form id="feedback">
+              <p>
+              Фамилия
+              <br>
+              <input type="text" id="lastname">
+              <br>
+              Имя
+              <br>
+              <input type="text" id="firstname">
+              <br>
+              Отчество
+              <br>
+              <input type="text" id="patronymic">
+              </p>
+              <p>Тема сообщения:<br>
+              <select id="topic">
+              <option value="1">Предложение</option>
+              <option value="2">Пожелание</option>
+              <option value="3">Потрындеть</option>
+              </select>
+              </p>
+              <p>
+              <input type="checkbox" id="email">Получить ответ по e-mail
+              </p>
+              <p>
+              <input type="submit" id="send" value="Отправить">
+              <input type="reset" id="clear" value="Начать заново">
+              </p>
+          </form>
+        </th>
+        <th>
+        <img src="images/feedback.GIF" alt="Обратная связь" width="50%">
+        </th>
+      </tr>
+    </table>
   </body>
 </html>
