--- a/index.html
+++ b/index.html
@@ -2,51 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Форма обратной связи</title>
+    <title>HTML, CSS, JS, React</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <script>
-    alert( 'Вы на странице формы обратной связи' );
-    </script>
-    <h1>Связаться с нами!</h1>
+    <h1>Hello World!</h1>
+    <hr>
     <table>
       <tr>
-        <th>
-          <form id="feedback">
-              <p>
-              Фамилия
-              <br>
-              <input type="text" id="lastname">
-              <br>
-              Имя
-              <br>
-              <input type="text" id="firstname">
-              <br>
-              Отчество
-              <br>
-              <input type="text" id="patronymic">
-              </p>
-              <p>Тема сообщения:<br>
-              <select id="topic">
-              <option value="1">Предложение</option>
-              <option value="2">Пожелание</option>
-              <option value="3">Потрындеть</option>
-              </select>
-              </p>
-              <p>
-              <input type="checkbox" id="email">Получить ответ по e-mail
-              </p>
-              <p>
-              <input type="submit" id="send" value="Отправить">
-              <input type="reset" id="clear" value="Начать заново">
-              </p>
-          </form>
-        </th>
-        <th>
-        <img src="images/feedback.GIF" alt="Обратная связь" width="50%">
-        </th>
+        <th><a href="vinsent.html" target="_self">Страничка Винса</a></th>
+        <th><a href="feedback.html" target="_self">Ссылка на форму обратной связи</a></th>
+        <th><a href="https://detifm.ru/programs_shows" target="_blank">Ссылка на программы Детского Радио</a></th>
       </tr>
     </table>
+      <!-- Здесь будет первый скрипт из корневой папки
+      <script src="root_script_1.js"></script>
+      -->
+      <img src="images/totoro.GIF" alt="Изображение хранителя леса" width="100%">
   </body>
 </html>
