--- a/vinsent.html
+++ b/vinsent.html
@@ -1,12 +1,14 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Vinsent One Fon Grizzli Style</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <h1>Страничка Винса</h1>
     <br>
-    <img src="images/vins-jump.JPG" alt="Винс в прыжке" width="50%">
+    <img class="center-pic" src="images/vins-jump.JPG" alt="Винс в прыжке" width="50%">
     <!-- Здесь будет выпадающий список: осень, зима, весна, лето и снова зима -->
   </body>
 </html>
