--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <hr>
     <table>
       <tr>
         <th><a href="vinsent.html" target="_self">Страничка Винса</a></th>
-        <th><a href="feedback.html" target="_self">Ссылка на форму обратной связи</a></th>
-        <th><a href="https://detifm.ru/programs_shows" target="_blank">Ссылка на программы Детского Радио</a></th>
+        <th><a href="feedback.html" target="_self">Обратная связь</a></th>
+        <th><a href="https://detifm.ru/programs_shows" target="_blank">Детское Радио</a></th>
       </tr>
     </table>
       <!-- Здесь будет первый скрипт из корневой папки
