--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML, CSS, JS, React</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body style="background-color: #1e2f49;">
     <table>
       <tr>
         <th><a href="vinsent.html" target="_self">Страничка Винса</a></th>
