--- a/feedback.html
+++ b/feedback.html
@@ -11,7 +11,7 @@
     </script>
     <table>
       <tr>
-        <th>
+        <th style="width: 100%;">
           <h2>Связаться с нами!</h2>
           <form id="feedback">
               <p>
