--- a/feedback.html
+++ b/feedback.html
@@ -27,7 +27,7 @@
               <br>
               <input type="text" id="patronymic">
               </p>
-              <p>Тема сообщения:<br>
+              <p>Тема сообщения:<br><br>
               <select id="topic">
               <option value="1">Предложение</option>
               <option value="2">Пожелание</option>
