--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <title>HTML, CSS, JS, React</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body style="background-color: #1e2f49;">
-    <table>
+  <body class="index-page">
+    <table class="index-page">
       <tr>
-        <th><a href="vinsent.html" target="_self">Страничка Винса</a></th>
-        <th><a href="feedback.html" target="_self">Обратная связь</a></th>
-        <th><a href="https://detifm.ru/programs_shows" target="_blank">Детское Радио</a></th>
+        <th class="index-page"><a href="vinsent.html" target="_self">Страничка Винса</a></th>
+        <th class="index-page"><a href="feedback.html" target="_self">Обратная связь</a></th>
+        <th class="index-page"><a href="https://detifm.ru/programs_shows" target="_blank">Детское Радио</a></th>
       </tr>
     </table>
-      <!-- Здесь будет первый скрипт из корневой папки
-      <script src="root_script_1.js"></script>
-      -->
-      <img src="images/totoro.GIF" alt="Изображение хранителя леса" width="100%">
+    <!-- Здесь будет первый скрипт из корневой папки
+    <script src="root_script_1.js"></script>
+    -->
+    <img src="images/totoro.GIF" alt="Изображение хранителя леса" width="100%">
   </body>
 </html>
