--- a/vinsent.html
+++ b/vinsent.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Страничка Винса</h1>
-    <img class="center-pic" src="images/vins-jump.JPG" alt="Винс в прыжке" width="100%">
+    <img class="center-pic" src="images/vins-jump.JPG" alt="Винс в прыжке">
     <!-- Здесь будет выпадающий список: осень, зима, весна, лето и снова зима -->
   </body>
 </html>
