--- a/vinsent.html
+++ b/vinsent.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Страничка Винса</h1>
-    <img class="center-pic" src="images/vins-jump.JPG" alt="Винс в прыжке">
-    <!-- Здесь будет выпадающий список: осень, зима, весна, лето и снова зима -->
+    <img class="fullscreen" src="images/vins-jump.JPG" alt="Винс в прыжке">
+    <!-- Здесь будет выпадающий список: весна, лето, осень, зима и снова весна -->
   </body>
 </html>
