--- a/vinsent.html
+++ b/vinsent.html
@@ -6,7 +6,13 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Страничка Винса</h1>
+    <table class="vins-page">
+      <tr>
+        <th></th>
+        <th><h1>Страничка Винса</h1></th>
+        <th class="index-button"><a href="index.html" target="_self"><img src="images/home-button.png" alt="Кнопка домой" width="15%"></a></th>
+      </tr>
+    </table>
     <img class="fullscreen" src="images/vins-jump.JPG" alt="Винс в прыжке">
     <!-- Здесь будет выпадающий список: весна, лето, осень, зима и снова весна -->
   </body>
