--- a/vinsent.html
+++ b/vinsent.html
@@ -8,9 +8,9 @@
   <body>
     <table class="vins-page">
       <tr>
-        <th></th>
-        <th><h1>Страничка Винса</h1></th>
-        <th class="index-button"><a href="index.html" target="_self"><img src="images/home-button.png" alt="Кнопка домой" width="15%"></a></th>
+        <th class="vins-page"></th>
+        <th class="vins-page"><h1>Страничка Винса</h1></th>
+        <th class="index-button"><a href="index.html" target="_self"><img src="images/home-button.png" alt="Кнопка домой" class="img-button"></a></th>
       </tr>
     </table>
     <img class="fullscreen" src="images/vins-jump.JPG" alt="Винс в прыжке">
