--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="index-page">
-    <table class="index-page">
+    <table>
       <tr>
         <th class="index-page"><a href="vinsent.html" target="_self">Страничка Винса</a></th>
         <th class="index-page"><a href="feedback.html" target="_self">Обратная связь</a></th>
