--- a/vinsent.html
+++ b/vinsent.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <table class="vins-page">
+    <table>
       <tr>
         <th class="vins-page"></th>
         <th class="vins-page"><h1>Страничка Винса</h1></th>
