--- a/feedback.html
+++ b/feedback.html
@@ -11,7 +11,7 @@
     </script>
     <table>
       <tr>
-        <th style="width: 35%;">
+        <th class="feedback-page">
           <h2>Связаться с нами!</h2>
           <form id="feedback">
               <p>
@@ -43,8 +43,11 @@
               </p>
           </form>
         </th>
-        <th>
-        <img src="images/feedback.GIF" alt="Обратная связь" width="50%">
+        <th class="feedback-page">
+        <img src="images/feedback.GIF" alt="Обратная связь" width="100%">
+        </th>
+        <th class="index-button">
+        <a href="index.html" target="_self"><img src="images/home-button.png" alt="Кнопка домой" class="img-button"></a>
         </th>
       </tr>
     </table>
