--- a/feedback.html
+++ b/feedback.html
@@ -44,10 +44,10 @@
           </form>
         </th>
         <th class="feedback-page">
-        <img src="images/feedback.GIF" alt="Обратная связь" width="100%">
+        <img class="fullscreen" src="images/feedback.GIF" alt="Обратная связь">
         </th>
         <th class="index-button">
-        <a href="index.html" target="_self"><img src="images/home-button.png" alt="Кнопка домой" class="img-button"></a>
+        <a href="index.html" target="_self"><img class="img-button" src="images/home-button.png" alt="Кнопка домой"></a>
         </th>
       </tr>
     </table>
