--- a/feedback.html
+++ b/feedback.html
@@ -11,6 +11,13 @@
     </script>
     <table>
       <tr>
+        <th class="vins-page"></th>
+        <th class="vins-page"></th>
+        <th class="index-button"><a href="index.html" target="_self"><img src="images/home-button.png" alt="Кнопка домой" class="img-button"></a></th>
+      </tr>
+    </table>
+    <table>
+      <tr>
         <th class="feedback-page">
           <h2>Связаться с нами!</h2>
           <form id="feedback">
@@ -45,9 +52,6 @@
         </th>
         <th class="feedback-page">
         <img class="fullscreen" src="images/feedback.GIF" alt="Обратная связь">
-        </th>
-        <th class="index-button">
-        <a href="index.html" target="_self"><img class="img-button" src="images/home-button.png" alt="Кнопка домой"></a>
         </th>
       </tr>
     </table>
