--- a/feedback.html
+++ b/feedback.html
@@ -12,14 +12,13 @@
     <table>
       <tr>
         <th class="vins-page"></th>
-        <th class="vins-page"></th>
+        <th class="vins-page"><h1>Связаться с нами!</h1></th>
         <th class="index-button"><a href="index.html" target="_self"><img src="images/home-button.png" alt="Кнопка домой" class="img-button"></a></th>
       </tr>
     </table>
     <table>
       <tr>
         <th class="feedback-page">
-          <h2>Связаться с нами!</h2>
           <form id="feedback">
               <p>
               Фамилия
@@ -33,17 +32,17 @@
               Отчество
               <br>
               <input type="text" id="patronymic">
-              </p>
+              </p><br>
               <p>Тема сообщения:<br><br>
               <select id="topic">
               <option value="1">Предложение</option>
               <option value="2">Пожелание</option>
               <option value="3">Потрындеть</option>
               </select>
-              </p>
+              </p><br><br>
               <p>
               <input type="checkbox" id="email">Получить ответ по e-mail
-              </p>
+              </p><br><br>
               <p>
               <input type="submit" id="send" value="Отправить">
               <input type="reset" id="clear" value="Начать заново">
