--- a/feedback.html
+++ b/feedback.html
@@ -11,8 +11,8 @@
     </script>
     <table>
       <tr>
-        <th class="vins-page"></th>
-        <th class="vins-page"><h1>Связаться с нами!</h1></th>
+        <th class="header"></th>
+        <th class="header"><h1>Связаться с нами!</h1></th>
         <th class="index-button"><a href="index.html" target="_self"><img src="images/home-button.png" alt="Кнопка домой" class="img-button"></a></th>
       </tr>
     </table>
@@ -24,25 +24,24 @@
               Фамилия
               <br>
               <input type="text" id="lastname">
-              <br>
+              <br><br>
               Имя
               <br>
               <input type="text" id="firstname">
-              <br>
+              <br><br>
               Отчество
-              <br>
               <input type="text" id="patronymic">
-              </p><br>
+              </p><br><br>
               <p>Тема сообщения:<br><br>
               <select id="topic">
               <option value="1">Предложение</option>
               <option value="2">Пожелание</option>
               <option value="3">Потрындеть</option>
               </select>
-              </p><br><br>
+              </p><br>
               <p>
               <input type="checkbox" id="email">Получить ответ по e-mail
-              </p><br><br>
+              </p>
               <p>
               <input type="submit" id="send" value="Отправить">
               <input type="reset" id="clear" value="Начать заново">
