--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body class="index-page">
     <table>
       <tr>
-        <th class="index-page"><a href="vinsent.html" target="_self">Страничка Винса</a></th>
-        <th class="index-page"><a href="feedback.html" target="_self">Обратная связь</a></th>
-        <th class="index-page"><a href="https://detifm.ru/programs_shows" target="_blank">Детское Радио</a></th>
+        <th class="index-page"><a href="vinsent.html" target="_self"><h2>Страничка Винса</h2></a></th>
+        <th class="index-page"><a href="feedback.html" target="_self"><h2>Обратная связь</h2></a></th>
+        <th class="index-page"><a href="https://detifm.ru/programs_shows" target="_blank"><h2>Детское Радио</h2></a></th>
       </tr>
     </table>
     <!-- Здесь будет первый скрипт из корневой папки
