--- a/feedback.html
+++ b/feedback.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Форма обратной связи</title>
+    <title>Feedback Form</title>
     <link rel="stylesheet" href="css/style.css">
+    <script>
+    alert( 'Страница обратной связи находится в разработке' );
+    </script>
   </head>
   <body>
-    <script>
-    alert( 'Вы на странице формы обратной связи' );
-    </script>
     <table>
       <tr>
         <th class="header"> </th>
@@ -46,7 +46,7 @@
               <p>
               <input type="submit" id="send" value="Отправить">
               <input type="reset" id="clear" value="Начать заново">
-              </p>
+              </p><br><br>
           </form>
         </th>
         <th class="feedback-page">
