--- a/feedback.html
+++ b/feedback.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Feedback Form</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <script>
     alert( 'Страница обратной связи находится в разработке' );
     </script>
