--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>HTML, CSS, JS, React</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body class="index-page">
     <table>
       <tr>
         <th class="index-page"><a href="vinsent.html" target="_self"><h2>Страничка Винса</h2></a></th>
         <th class="index-page"><a href="feedback.html" target="_self"><h2>Обратная связь</h2></a></th>
-        <th class="index-page"><a href="index2.html" target="_blank"><h2>CSS от ITC</h2></a></th>
+        <th class="index-page"><a href="itc.html" target="_blank"><h2>CSS от ITC</h2></a></th>
       </tr>
     </table>
     <!-- Здесь будет первый скрипт из корневой папки
