--- a/itc.html
+++ b/itc.html
@@ -11,11 +11,11 @@
   </header>
   <article class="article article_whitebg article_first">
     <h2 class="black">Это учебная<br>страница!</h2>
-    <p class="black">Она написана на <strong>HTML</strong>, кроме того, к ней подключен стилевой файл и всё стало красивым</p>
+    <p class="black">Она написана на <strong>HTML</strong>, кроме того, к ней подключен стилевой файл</p>
   </article>
   <article class="article article_bluebg article_second">
     <h2 class="white">Свяжись со мной!</h2>
-    <p class="white">Ты по-любому захочешь, чтобы я сделал такую же красоту и тебе. Поэтому обрати внимание на форму обратной связи! Пиши, не стесняйся</p>
+    <p class="white">Хочешь, чтобы я сделал такую же красоту и тебе?<br>Обрати внимание на форму обратной связи! Пиши, не стесняйся</p>
     <form class="form">
       <input type="email" class="form_input" placeholder="E-mail">
       <input type="text" class="form_input" placeholder="Имя">
