--- a/feedback.html
+++ b/feedback.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <title>Feedback Form</title>
     <link rel="stylesheet" href="style.css">
-    <script>
-    alert( 'Страница обратной связи находится в разработке' );
-    </script>
+    <script src="test_script_1.js"></script>
   </head>
   <body>
     <table>
