--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
       <tr>
         <th class="index-page"><a href="vinsent.html" target="_self"><h2>Страничка Винса</h2></a></th>
         <th class="index-page"><a href="feedback.html" target="_self"><h2>Обратная связь</h2></a></th>
-        <th class="index-page"><a href="itc.html" target="_blank"><h2>CSS от ITC</h2></a></th>
+        <th class="index-page"><a href="itc.html" target="_blank">
+          <h2><a href="itc.html" target="_blank">CSS</a> | <a href="js.html" target="_blank">JS</a></h2></th>
       </tr>
     </table>
-    <!-- Здесь будет первый скрипт из корневой папки
-    <script src="root_script_1.js"></script>
-    -->
     <img src="images/totoro.GIF" alt="Изображение хранителя леса" width="100%">
   </body>
 </html>
