--- a/vinsent.html
+++ b/vinsent.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Vinsent One Fon Grizzli Style</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Здесь будет скрипт обрабатывающий изображения
+    <script src="script_2.js"></script>
+    -->
   </head>
   <body>
     <table>
@@ -14,6 +17,5 @@
       </tr>
     </table>
     <img class="fullscreen" src="images/vins-jump.JPG" alt="Винс в прыжке">
-    <!-- Здесь будет выпадающий список: весна, лето, осень, зима и снова весна -->
   </body>
 </html>
