--- a/feedback.html
+++ b/feedback.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Feedback Form</title>
     <link rel="stylesheet" href="style.css">
-    <script src="test_script_1.js"></script>
+    <script>alert("Страница находится в разработке");</script>
   </head>
   <body>
     <table>
