--- a/js.html
+++ b/js.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>JS, React</title>
     <link rel="stylesheet" href="style_itc.css">
-    <script src="test_script_1.js"></script>
+    <script src="script_1.js"></script>
   </head>
   <body class="index-page">
     <header class="header">
