--- a/js.html
+++ b/js.html
@@ -8,7 +8,7 @@
   </head>
   <body class="index-page">
     <header class="header">
-      <h1 class="header__title">Привет<br>мир CSS!</h1>
+      <h1 class="header__title">Привет<br>мир!</h1>
     </header>
   </body>
 </html>
