--- a/js.html
+++ b/js.html
@@ -7,6 +7,7 @@
   </head>
   <body class="index-page">
     <header class="header">
+      <h1 class="header__title">Привет<br>мир CSS!</h1>
       <script src="script_1.js"></script>
     </header>
   </body>
