--- a/js.html
+++ b/js.html
@@ -7,8 +7,8 @@
   </head>
   <body class="index-page">
     <header class="header">
-      <h1 class="header__title">Привет<br>мир CSS!</h1>
-      <script src="script_1.js"></script>
+      <h1 class="header__title">Привет<br>мир!</h1>
     </header>
+    <script src="script_1.js"></script>
   </body>
 </html>
