--- a/js.html
+++ b/js.html
@@ -8,6 +8,7 @@
   <body class="index-page">
     <header class="header">
       <h1 class="header__title">Привет<br>мир!</h1>
+      <p id="ages"></p>
     </header>
     <script src="script_1.js"></script>
   </body>
