--- a/js.html
+++ b/js.html
@@ -7,8 +7,9 @@
   </head>
   <body class="index-page">
     <header class="header">
-      <h1 class="header__title" id="ages">Привет<br>мир!</h1>
+      <h1 class="header__title">Привет<br>мир!</h1>
     </header>
+    <h2 id="ages"></h2>
     <script src="script_1.js"></script>
   </body>
 </html>
