--- a/js.html
+++ b/js.html
@@ -8,8 +8,8 @@
   <body class="index-page">
     <header class="header">
       <h1 class="header__title">Привет<br>мир!</h1>
+      <div id="ages"></div>
     </header>
-    <h2 id="ages"></h2>
     <script src="script_1.js"></script>
   </body>
 </html>
