--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML, CSS, JS, React</title>
+    <link rel="icon" href="images/favicon1.png" type="image/png">
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="index-page">
