--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <tr>
         <th class="index-page"><a href="vinsent.html" target="_self"><h2>Страничка Винса</h2></a></th>
         <th class="index-page"><a href="feedback.html" target="_self"><h2>Обратная связь</h2></a></th>
-        <th class="index-page"><a href="itc.html" target="_blank">
-          <h2><a href="itc.html" target="_blank">CSS </a>  |  <a href="js.html" target="_blank"> JS</a></h2></th>
+        <th class="index-page"><a href="itc.html" target="_blank"><h2>CSS</h2></a></th>
+        <th class="index-page"><a href="js.html" target="_blank"><h2>JS</h2></a></th>
       </tr>
     </table>
     <img src="images/totoro.GIF" alt="Изображение хранителя леса" width="100%">
