--- a/js.html
+++ b/js.html
@@ -9,6 +9,7 @@
     <header class="header">
       <h1 id="ages">Привет<br>мир!</h1>
     </header>
+    <img class="pxl" src="images/bg.svg" alt="">
     <script src="script_1.js"></script>
   </body>
 </html>
