--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body class="index-page">
     <table>
       <tr>
-        <th class="index-page"><a href="vinsent.html" target="_self"><h2>Страничка Винса</h2></a></th>
+        <th class="index-page"><a href="vinsent-page.html" target="_self"><h2>Страничка Винса</h2></a></th>
         <th class="index-page"><a href="itc.html" target="_blank"><h2>CSS</h2></a></th>
         <th class="index-page"><a href="js.html" target="_blank"><h2>JS</h2></a></th>
         <th class="index-page"><a href="feedback.html" target="_self"><h2>Обратная связь</h2></a></th>
