--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -91,7 +91,7 @@
     <div class="container">
       <a href="#" class="navbar-brand d-flex align-items-center">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></svg>
-        <strong>Album</strong>
+        <strong>Фотоальбом</strong>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -106,11 +106,8 @@
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">Винсент. Начало.</h1>
-        <p class="lead text-muted">Здесь должно быть что-то про собакена и начало его жизненного пути. Но лучше мы пока посмотрим фотки</p>
-        <p>
-          <a href="#" class="btn btn-primary my-2">Кнопка "primary action"</a>
-          <a href="#" class="btn btn-secondary my-2">Кнопка "secondary action"</a>
-        </p>
+        <p class="lead text-muted">Здесь должно быть что-то про собакена и начало его жизненного пути. Но лучше мы пока посмотрим фотки...</p>
+      
       </div>
     </div>
   </section>
