--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -64,7 +64,6 @@
       }
     </style>
 
-
   </head>
   <body>
 
@@ -107,7 +106,6 @@
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">Винсент. Начало.</h1>
         <p class="lead text-muted">Здесь должно быть что-то про собакена и начало его жизненного пути. Но лучше мы пока посмотрим фотки...</p>
-      
       </div>
     </div>
   </section>
@@ -118,14 +116,18 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
+            <!-- закоментили шаблонный тег svg
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            -->
+            <a href="images/vins/IMG-01.JPG" target="_blank"><img src="images/vins/IMG-01M.JPG" alt="Пес-хомяк" width="100%" height="225"></a>
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Первое знакомство. В возрасте примерно трех недель пес был похож скорее на хомячка или морскую свинку чем на собаку.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+            <a href="images/vins/IMG-01.JPG" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                <!-- закоментили кнопку редактирования 
+                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                -->
                 </div>
                 <small class="text-muted">9 mins</small>
               </div>
