--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -119,12 +119,12 @@
             <!-- закоментили шаблонный тег svg
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             -->
-            <a href="images/vins/IMG-01.JPG" target="_blank"><img src="images/vins/IMG-01M.JPG" alt="Пес-хомяк" width="100%" height="225"></a>
+            <a href="images/vins/IMG-01.jpg" target="_blank"><img src="images/vins/IMG-01M.JPG" alt="Пес-хомяк" width="100%" height="225"></a>
             <div class="card-body">
               <p class="card-text">Первое знакомство. В возрасте примерно трех недель пес был похож скорее на хомячка или морскую свинку чем на собаку.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-            <a href="images/vins/IMG-01.JPG" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+            <a href="images/vins/IMG-01.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
                 <!-- закоментили кнопку редактирования 
                 <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                 -->
