--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -119,19 +119,19 @@
             <!-- закоментил шаблонный тег svg и вместо него вставил тег img
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             -->
-            <a href="images/vins/IMG-01.jpg" target="_blank"><img src="images/vins/IMG-01M.JPG" alt="Пес-хомяк" width="100%" height="225"></a>
+            <a href="images/vins/IMG-01.jpg" target="_blank"><img src="images/vins/IMG-01M.jpg" alt="Пес-хомяк" width="100%" height="225"></a>
             <div class="card-body">
               <p class="card-text">Первое знакомство. В возрасте примерно трех недель пес был похож скорее на хомячка или морскую свинку чем на собаку.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-            <a href="images/vins/IMG-01.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
-                <!-- закоментили кнопку редактирования
-                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                -->
+                  <a href="images/vins/IMG-01.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
                 </div>
-                <!-- закоментили тег small
-                <small class="text-muted">9 mins</small>
-                -->
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
               </div>
             </div>
           </div>
@@ -139,15 +139,19 @@
         <div class="col">
           <div class="card shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            <a href="images/vins/IMG-02.jpg" target="_blank"><img src="images/vins/IMG-02M.jpg" alt="Пес-хомяк" width="100%" height="225"></a>
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Родственнички. Суровая мама Лилу и ее первый помет.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <a href="images/vins/IMG-02.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
                 </div>
-                <small class="text-muted">9 mins</small>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
               </div>
             </div>
           </div>
