--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -119,7 +119,7 @@
             <!-- закоментил шаблонный тег svg и вместо него вставил тег img
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             -->
-            <a href="images/vins/IMG_01.jpg" target="_blank"><img src="images/vins/IMG_01M.jpg" alt="Пес-хомяк" width="100%" height="225"></a>
+            <a href="images/vins/IMG_01.jpg" target="_blank"><img src="images/vins/IMG_01M.jpg" alt="Пес-хомяк" height="225"></a>
             <div class="card-body">
               <p class="card-text">Первое знакомство. В возрасте примерно трех недель пес был похож скорее на хомячка или морскую свинку чем на собаку.</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -138,10 +138,12 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-            <a href="images/vins/IMG_02.jpg" target="_blank"><img src="images/vins/IMG_02M.jpg" alt="Пес-хомяк" width="100%" height="225"></a>
+            -->
+            <a href="images/vins/IMG_02.jpg" target="_blank"><img src="images/vins/IMG_02M.jpg" alt="Семья" height="225"></a>
             <div class="card-body">
-              <p class="card-text">Родственнички. Суровая мама Лилу и ее первый помет.</p>
+              <p class="card-text">Родственнички - суровая мама Лилу и ее первый помет.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="images/vins/IMG_02.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
