--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -160,16 +160,22 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            -->
+            <a href="images/vins/IMG_03.jpg" target="_blank"><img src="images/vins/IMG_03M.jpg" alt="В новом доме" height="225"></a>
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">В новом доме.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <a href="images/vins/IMG_03.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
                 </div>
-                <small class="text-muted">9 mins</small>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
               </div>
             </div>
           </div>
