--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -65,9 +65,9 @@
 
       .fotoicon {
         width: 100%;
-        padding: 5px;
-        margin: 5px;
-        align: center;
+        padding: 1px;
+        margin: 1px;
+        text-align: center;
       }
       
     </style>
