--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -149,10 +149,12 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
+            <div class="fotoicon">
             <!-- закоментил шаблонный тег svg и вместо него вставил тег img
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             -->
             <a href="images/vins/IMG_02.jpg" target="_blank"><img src="images/vins/IMG_02M.jpg" alt="Семья" height="225"></a>
+            </div>
             <div class="card-body">
               <p class="card-text">Родственнички - суровая мама Лилу и ее первый помет.</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -171,10 +173,12 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
+            <div class="fotoicon">
             <!-- закоментил шаблонный тег svg и вместо него вставил тег img
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             -->
             <a href="images/vins/IMG_03.jpg" target="_blank"><img src="images/vins/IMG_03M.jpg" alt="В новом доме" height="225"></a>
+            </div>
             <div class="card-body">
               <p class="card-text">В новом доме.</p>
               <div class="d-flex justify-content-between align-items-center">
