--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -69,7 +69,7 @@
         margin: 1px;
         text-align: center;
       }
-      
+
     </style>
 
   </head>
@@ -86,9 +86,8 @@
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Контакты</h4>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Instagramm</a></li>
-            <li><a href="#" class="text-white">Telegram</a></li>
-            <li><a href="#" class="text-white">Почта</a></li>
+            <li><a href="https://instagram.com/vinsent_basenji/" target="_blank" class="text-white">Instagramm</a></li>
+            <li><a href="mailto:itsright@yandex.ru" class="text-white">Почта</a></li>
           </ul>
         </div>
       </div>
@@ -96,7 +95,7 @@
   </div>
   <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container">
-      <a href="#" class="navbar-brand d-flex align-items-center">
+      <a href="#photos" class="navbar-brand d-flex align-items-center">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></svg>
         <strong>Фотоальбом</strong>
       </a>
@@ -121,14 +120,14 @@
   <div class="album py-5 bg-light">
     <div class="container">
 
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="photos">
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
             <!-- закоментил шаблонный тег svg и вместо него вставил тег img
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             -->
-            <a href="images/vins/IMG_01.jpg" target="_blank"><img src="images/vins/IMG_01M.jpg" alt="Пес-хомяк" height="225"></a>
+            <a href="images/vins/IMG_01.jpg" target="_blank"><img src="images/vins/IMG_01M.jpg" alt="Пес-хомяк" height="220"></a>
             </div>
 
             <div class="card-body">
@@ -153,7 +152,7 @@
             <!-- закоментил шаблонный тег svg и вместо него вставил тег img
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             -->
-            <a href="images/vins/IMG_02.jpg" target="_blank"><img src="images/vins/IMG_02M.jpg" alt="Семья" height="225"></a>
+            <a href="images/vins/IMG_02.jpg" target="_blank"><img src="images/vins/IMG_02M.jpg" alt="Семья" height="220"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Родственнички - суровая мама Лилу и ее первый помет.</p>
@@ -177,7 +176,7 @@
             <!-- закоментил шаблонный тег svg и вместо него вставил тег img
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             -->
-            <a href="images/vins/IMG_03.jpg" target="_blank"><img src="images/vins/IMG_03M.jpg" alt="В новом доме" height="225"></a>
+            <a href="images/vins/IMG_03.jpg" target="_blank"><img src="images/vins/IMG_03M.jpg" alt="В новом доме" height="220"></a>
             </div>
             <div class="card-body">
               <p class="card-text">В новом доме.</p>
